--- a/templates/chartjs.hbs
+++ b/templates/chartjs.hbs
@@ -1,3 +1,3 @@
 <div class="chart-inner component-inner" role="region" aria-label="{{_globals._components._chart.ariaRegion}}" {{#if _globals._components._chart.ariaRegion}}tabindex="0"{{/if}}>
-
+  <canvas id="myChart" width="400" height="400"></canvas>
 </div>
