First commit with aria text appearing

--- a/less/chartjs.less
+++ b/less/chartjs.less
@@ -1,4 +1,8 @@
-.charts-component {
-
-
+.chartjs-component {
+  .chart-alt {
+    position: absolute;
+    max-height: 1px;
+    max-width: 1px;
+    opacity: 0;
+  }
 }
