--- a/templates/chartjs.hbs
+++ b/templates/chartjs.hbs
@@ -2,3 +2,4 @@
   {{> component this}}
   <canvas id="myChart{{_id}}" class="component-widget" width="640" height="360" style="width: 100%; height: 100%;"></canvas>
 </div>
+{{#if alt}} <span class="chart-alt">{{alt}}</span>{{/if}}
